# cpp_rhythm

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  DataReader.cpp  DataReader.h  Game.cpp  Game.h  GlobalSettings.cpp  GlobalSettings.h  Note.cpp  Note.h  NoteBar.cpp  NoteBar.h  Window.cpp  Window.h  main.cpp  makefile  readme.md
SettingCompiler/: GlobalSettingsTemplate.cpp  SettingsCompiler.js  settings.global.json
assets/: config.txt
assets/music/: Wolf.mscz
base/: Game.cpp  Game.h  Note.cpp  NoteBar.h  Window.cpp
compilers/SequencesCompiler/: NoteData.h  NoteSequenceTemplate.cpp  NoteSequenceTemplate.h  SequencesCompiler.js
compilers/SequencesCompiler/Sequences/: castle.json  enemy1.json
compilers/SettingsCompiler/: GlobalSettingsTemplate.cpp  SettingsCompiler.js  settings.debug.json
data/: castle.json
src/base/: Config.h  GlobalSettings.cpp  Note.h  main.cpp
src/utils/: JSONLoader.cpp
src/world/: Location.h  NoteData.cpp  NoteData.h  Sequence.cpp  Sequence.h  Sequencer.cpp  Sequencer.h
utils/: Debug.cpp  Debug.h  JSONLoader.h  MusicClip.cpp  MusicClip.h
world/: Castle.cpp  Castle.h  Location.cpp  Location.h  NoteBar.cpp  NoteBar.h  NoteData.cpp  NoteData.h  NoteSequence.h  Room.cpp  Room.h  Sequence.cpp  Sequence.h  Sequencer.cpp  Sequencer.h
world/sequences/: CastleNoteSequence.cpp  CastleNoteSequence.h  Enemy1NoteSequence.cpp  Enemy1NoteSequence.h
